--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/tinymce": "^4.6.9",
     "js-beautify": "^1.15.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
